[package]
name = "vote"
version = "0.1.0"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Common voting methods"
edition = "2018"
readme = "README.md"
repository = "https://github.com/cmccomb/vote"
homepage = "https://github.com/cmccomb/vote"
documentation = "https://docs.rs/vote"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "benchmark", "functions"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
rand="0.7.3"